# oapi-client-template

./: .gitignore  Makefile  README.md  cookiecutter.json  pyproject.toml
.github/workflows/: test.yml
hooks/: post_gen_project.py  pre_gen_project.py
{{cookiecutter.project_name}}/: Makefile  README.md  mkdocs.yaml  pyproject.toml
{{cookiecutter.project_name}}/docs/: CNAME  contributing.md  index.md
{{cookiecutter.project_name}}/scripts/: remodel.py
